--- a/order.css
+++ b/order.css
@@ -14,45 +14,19 @@ html {
   height: 50px;
 }
 
-h1 {
-    font-size: 5rem;
-    color: #6fc25b;
-    margin-left: 30px;
-    margin-right: 30px;
-    text-shadow: 0 0 10px antiquewhite;
-    text-align: center;
-    
-}
-
 hr {
-  border: 3px solid rgba(250, 235, 215, 1);
-}
-/* #hh {
-  margin-bottom: 50px;
-} */
+    border: 3px solid rgba(250, 235, 215, 1);
+  }
 
-p{
-  margin-top: 10px;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-  text-align: center;
-  vertical-align: middle;
-  
-  color: rgba(250, 235, 215, 1);;
-}
-
-#bb{
-  border: 3px solid rgba(250, 235, 215, 1);
-
-  margin-top: 50px;
- 
-
+body {
+    color: antiquewhite;
+    margin-left: 50px;
 }
 
 .buttons {
     justify-self: center;
     align-items: center;
-    text-transform: capitalize;
+    text-transform: uppercase;
     text-shadow: 0 0 10px antiquewhite;
     /* margin-left: 30px; */
     color: rgba(41, 130, 19, 1);
@@ -62,37 +36,34 @@ p{
     font-weight: 700;
     border-radius: 300px;
     border: 2px solid rgba(250, 235, 215, .3);
-    
-    
-    
+    margin-left: 10px;   
 }
 .buttons:after {
-  content:'order your delivery here';
+  content:'home';
 }
 .buttons:hover {
-  transform: rotate(1080deg);
-  transition: 1s;
+  transform: scale(2);
+  transition: 2s;
 }
 .buttons:hover:after {
   /* background-color: rgba(41, 130, 19, .3); */
   color: rgba(41, 130, 19, 1);
-  content: 'YOU ASK, WE DELIVER.';
+  content: 'Returning to home';
 }
-/* .btn-xl {
-  padding: 1rem 2rem;
-} */
-
-
 
 /* property for Robot animation */
 .robots {
 	align-items: center;
   	bottom: auto;
   	
-	margin-right: 45px;
+	margin-right: 50px;
 	margin-top: 20px;
-	margin-left: 50px;
-	margin-bottom: 35px;
+	margin-left: 5px;
+	margin-bottom: 20px;
+
+    position: fixed;
+        top: 0;
+        left: 0;
 }
 
 .head, 
@@ -105,23 +76,23 @@ p{
 }
 
 .head { 
-	width: 80px; 
+	width: 40px; 
 	margin: 0 auto; 
-	height: 60px; 
-	border-radius: 80px 80px 0 0; 
-	margin-bottom: 2px;
+	height: 25px; 
+	border-radius: 40px 40px 0 0; 
+	margin-bottom: 1px;
 } 
 
 .head:hover {
-	width: 120px;
+	width: 60px;
     transition: 2s ease-in-out;
-	transform: translateY(-12px) rotate(-1080deg);
+	transform: translateY(-5px) rotate(-1080deg);
 	/* background-color: black; */
 }
 
 .upper_body { 
-	width: 120px; 
-	height: 60px;
+	width: 60px; 
+	height: 25px;
 	/* color: #5f93e8; */
 	display: flex; 
 	margin-left: auto;
@@ -132,47 +103,47 @@ p{
 } 
 
 .left_arm, .right_arm { 
-	width: 16px; 
-	height: 50px;
-	border-radius: 40px; 
+	width: 8px; 
+	height: 25px;
+	border-radius: 20px; 
 } 
 
 .left_arm { 
-	margin-right: 4px; 
+	margin-right: 2px; 
 	transition: 1s ease-in-out;
 } 
 
 .right_arm { 
-	margin-left: 4px; 
+	margin-left: 2px; 
 	transition: 1s ease-in-out;
 } 
 
 .left_arm:hover {
-	-webkit-transform: translateX(-40px) rotate(810deg) scale(2);
-    -moz-transform: translateX(-40px) rotate(810deg) scale(2);
-    -o-transform: translateX(-40px) rotate(810deg) scale(2);
-    -ms-transform: translateX(-40px) rotate(810deg) scale(2);
-    transform: translateX(-40px) rotate(810deg) scale(2); 
+	-webkit-transform: translateX(-20px) rotate(810deg) scale(2);
+    -moz-transform: translateX(-20px) rotate(810deg) scale(2);
+    -o-transform: translateX(-20px) rotate(810deg) scale(2);
+    -ms-transform: translateX(-20px) rotate(810deg) scale(2);
+    transform: translateX(-20px) rotate(810deg) scale(2); 
 	/* background-color: black; */
 }
 
 .right_arm:hover {
-	-webkit-transform: translateX(40px) rotate(-810deg) scale(2);
-    -moz-transform: translateX(40px) rotate(-810deg) scale(2);
-    -o-transform: translateX(40px) rotate(-810deg) scale(2);
-    -ms-transform: translateX(40px) rotate(-810deg) scale(2);
-    transform: translateX(40px) rotate(-810deg) scale(2); 
+	-webkit-transform: translateX(20px) rotate(-810deg) scale(2);
+    -moz-transform: translateX(20px) rotate(-810deg) scale(2);
+    -o-transform: translateX(20px) rotate(-810deg) scale(2);
+    -ms-transform: translateX(20px) rotate(-810deg) scale(2);
+    transform: translateX(20px) rotate(-810deg) scale(2); 
 	/* background-color: black; */
 }
 
 .torso { 
-	width: 80px; 
-	height: 80px;
+	width: 40px; 
+	height: 25px;
 	/* color: #5f93e8; */
-	border-radius: 0 0 20px 20px; 
+	border-radius: 0 0 1px 1px; 
 } 
 .torso:hover {
-	transform:translateY(-60px) scale(.2);
+	transform:translateY(-30px) scale(.2);
 	/* transform:; */
 	
 	transition: 3s ease-in-out;
@@ -181,8 +152,8 @@ p{
 }
 
 .lower_body { 
-	width: 80px; 
-	height: 80px;
+	width: 40px; 
+	height: 35px;
 	/* This is another useful property. Hmm what do you think it does?*/
 	/* margin: 0 auto; */
 	display: flex; 
@@ -196,9 +167,9 @@ p{
 } 
 
 .left_leg, .right_leg { 
-	width: 16px; 
-	height: 48px;
-	border-radius: 40px; 
+	width: 8px; 
+	height: 20px;
+	border-radius: 20px; 
 } 
 
 .left_leg { 
@@ -213,7 +184,7 @@ p{
     -moz-transform: rotate(405deg) scale(2);
     -o-transform: rotate(405deg) scale(2);
     -ms-transform: rotate(405deg) scale(2);
-    transform: rotate(1175deg) scale(2) translateY(40px);
+    transform: rotate(1175deg) scale(2) translateY(20px);
 	transition: 1s ease-in-out;
 	/* background-color: red; */
 }
@@ -230,7 +201,7 @@ p{
     -moz-transform: rotate(-405deg) scale(2);
     -o-transform: rotate(-405deg) scale(2);
     -ms-transform: rotate(-405deg) scale(2);
-    transform: rotate(-1175deg) scale(2) translateY(40px);; 
+    transform: rotate(-1175deg) scale(2) translateY(20px);; 
 	transition: 1s ease-in-out;
 	/* background-color: red; */
 }
@@ -245,9 +216,9 @@ p{
 }
 
 .left_eye, .right_eye { 
-	width: 8px; 
-	height: 8px; 
-	border-radius: 6px; 
+	width: 4px; 
+	height: 4px; 
+	border-radius: 3px; 
 	background-color: white;  
 } 
 
@@ -255,18 +226,12 @@ p{
 	/* These properties are new and you haven't encountered
 	in this course. Check out CSS Tricks to see what it does! */
 	position: relative; 
-	top: 40px; 
+	top: 10px; 
 	left: auto; 
 } 
 
 .right_eye { 
 	position: relative; 
-	top: 40px; 
+	top: 10px; 
 	left: auto; 
 }
-
-footer {
-justify-content: center;
-align-content: center;
-    
-} 
