--- a/css.css
+++ b/css.css
@@ -61,11 +61,9 @@ p{
     /* margin-bottom: 50px; */
     font-weight: 700;
     border-radius: 300px;
-    border: 2px solid rgba(250, 235, 215, .3);
-    
-    
-    
+    border: 2px solid rgba(250, 235, 215, .3);  
 }
+
 .buttons:after {
   content:'order your delivery here';
 }
@@ -82,6 +80,20 @@ p{
   padding: 1rem 2rem;
 } */
 
+.buttonA {
+    justify-self: center;
+    align-items: center;
+    text-transform: capitalize;
+    text-shadow: 0 0 10px antiquewhite;
+    /* margin-left: 30px; */
+    color: rgba(41, 130, 19, 1);
+    background-color: rgba(250, 235, 215, .8);
+    /* background-color: rgba(111, 194, 91, .3); */
+    /* margin-bottom: 50px; */
+    font-weight: 700;
+    border-radius: 300px;
+    border: 2px solid rgba(250, 235, 215, .3);  
+}
 
 
 /* property for Robot animation */
